syntax = "proto3";

package g1.protocol;

import "common.proto";
import "role.proto";

//////////////////////////////////////////////////////////

// MAIN_INNER_ADD_ITEM_REQ
message MainInnerAddItemReq {
    repeated PbItem item_list = 1;
}

message MainInnerAddItemRsp {
    Ret ret = 1;
}



// CONN_KICK_OUT_REQ
message ConnKickOutReq {
  EKickOutReason reason = 1;
  string         remote_addr = 2;
}

message ConnKickOutRsp {
}


// CONN_BROADCAST_REQ
message ConnBroadcastReq {
  uint32 cmd = 1;
  bytes body = 2;
}

message ConnBroadcastRsp {
}